docs-archive/apache-airflow-providers-dbt-cloud/4.9.0/_sources/_api/airflow/providers/dbt/cloud/triggers/dbt/index.rst.txt
airflow.providers.dbt.cloud.triggers.dbt
========================================

.. py:module:: airflow.providers.dbt.cloud.triggers.dbt


Classes
-------

.. autoapisummary::

   airflow.providers.dbt.cloud.triggers.dbt.DbtCloudRunJobTrigger


Module Contents
---------------

.. py:class:: DbtCloudRunJobTrigger(conn_id, run_id, end_time, poll_interval, account_id, hook_params = None, execution_deadline = None)

   Bases: :py:obj:`airflow.triggers.base.BaseTrigger`


   Trigger to make an HTTP call to dbt and get the status for the job.

   This is done with run id in polling interval of time.

   :param conn_id: The connection identifier for connecting to Dbt.
   :param run_id: The ID of a dbt Cloud job.
   :param end_time: Time in seconds to wait for a job run to reach a terminal status. Defaults to 7 days.
   :param execution_deadline: Optional absolute timestamp (in seconds since the epoch) after which
       the task is considered timed out.
   :param account_id: The ID of a dbt Cloud account.
   :param poll_interval:  polling period in seconds to check for the status.
   :param hook_params: Extra arguments passed to the DbtCloudHook constructor.


   .. py:attribute:: run_id


   .. py:attribute:: account_id


   .. py:attribute:: conn_id


   .. py:attribute:: end_time


   .. py:attribute:: execution_deadline
      :value: None



   .. py:attribute:: poll_interval


   .. py:attribute:: hook_params


   .. py:method:: serialize()

      Serialize DbtCloudRunJobTrigger arguments and classpath.



   .. py:method:: run()
      :async:


      Make async connection to Dbt, polls for the pipeline run status.



   .. py:method:: is_still_running(hook)
      :async:


      Check whether the submitted job is running.



